--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -2,12 +2,18 @@
 
 one:
   name: MyString
-  calories: 1
   fat: 1
+  calories: 1
   protein: 1
+  count: 1
+  instructions: MyText
+  user_id: 
 
 two:
   name: MyString
-  calories: 1
   fat: 1
+  calories: 1
   protein: 1
+  count: 1
+  instructions: MyText
+  user_id: 
